// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FinancialOffenceDecisionComponent should compile correctly with discharge offence decision with absolute discharge 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="discharge-type"
    >
      Discharged Absolutely
    </div>
    <div
      data-role="compensation"
    >
      No compensation ordered because some reason
    </div>
    <div
      data-role="guilty-plea-taken-into-account"
    >
       Defendant's guilty plea Taken into account when imposing sentence 
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should compile correctly with discharge offence decision with conditional discharge 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="discharge-type"
    >
      Discharged conditionally for 10 week
    </div>
    <div
      data-role="compensation"
    >
      No compensation ordered because some reason
    </div>
    <div
      data-role="guilty-plea-taken-into-account"
    >
       Defendant's guilty plea Taken into account when imposing sentence 
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should compile correctly with disqualification with discharge for discretionary 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="discharge-type"
    >
      Discharged Absolutely
    </div>
    <div
      data-role="compensation"
    >
    </div>
    <div
      data-role="disqualification"
    >
       Disqualified from holding or obtaining a driving licence for 3 days. Discretionary disqualification. Driving record endorsed. Section 34(2) Road Traffic Offenders Act 1988. 
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should compile correctly with disqualification with discharge for obligatory 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="discharge-type"
    >
      Discharged Absolutely
    </div>
    <div
      data-role="compensation"
    >
    </div>
    <div
      data-role="disqualification"
    >
       Disqualified from holding or obtaining a driving licence for 3 years. Disqualification obligatory for the offence. Driving record endorsed. Section 34(1) Road Traffic Offenders Act 1988. 
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should compile correctly with disqualification with discharge points disqualification, with notional penalty points 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="discharge-type"
    >
      Discharged Absolutely
    </div>
    <div
      data-role="compensation"
    >
    </div>
    <div
      data-role="disqualification"
    >
       Disqualified from holding or obtaining a driving licence for 3 months. Disqualification obligatory due to repeat offending. Driving record endorsed. Notional penalty points determined 3 penalty points. Section 35(1) Road Traffic Offenders Act 1988. 
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should compile correctly with disqualification with discharge points disqualification, without notional penalty points 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="discharge-type"
    >
      Discharged Absolutely
    </div>
    <div
      data-role="compensation"
    >
    </div>
    <div
      data-role="disqualification"
    >
       Disqualified from holding or obtaining a driving licence for 3 months. Disqualification obligatory due to repeat offending. Driving record endorsed. Section 35(1) Road Traffic Offenders Act 1988. 
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should compile correctly with disqualification with financial penalty for discretionary 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="fine"
    >
      Fine £10
    </div>
    <div
      data-role="compensation"
    >
      To pay compensation of £20
    </div>
    <div
      data-role="disqualification"
    >
       Disqualified from holding or obtaining a driving licence for 1 day. Discretionary disqualification. Driving record endorsed. Section 34(2) Road Traffic Offenders Act 1988. 
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should compile correctly with disqualification with financial penalty for obligatory 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="fine"
    >
      Fine £10
    </div>
    <div
      data-role="compensation"
    >
      To pay compensation of £20
    </div>
    <div
      data-role="disqualification"
    >
       Disqualified from holding or obtaining a driving licence for 1 year. Disqualification obligatory for the offence. Driving record endorsed. Section 34(1) Road Traffic Offenders Act 1988. 
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should compile correctly with disqualification with financial penalty points disqualification, with notional penalty points 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="fine"
    >
      Fine £10
    </div>
    <div
      data-role="compensation"
    >
      To pay compensation of £20
    </div>
    <div
      data-role="disqualification"
    >
       Disqualified from holding or obtaining a driving licence for 1 month. Disqualification obligatory due to repeat offending. Driving record endorsed. Notional penalty points determined 3 penalty points. Section 35(1) Road Traffic Offenders Act 1988. 
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should compile correctly with disqualification with financial penalty points disqualification, without notional penalty points 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="fine"
    >
      Fine £10
    </div>
    <div
      data-role="compensation"
    >
      To pay compensation of £20
    </div>
    <div
      data-role="disqualification"
    >
       Disqualified from holding or obtaining a driving licence for 1 month. Disqualification obligatory due to repeat offending. Driving record endorsed. Section 35(1) Road Traffic Offenders Act 1988. 
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should compile correctly with endorsement with discharge with no points 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="discharge-type"
    >
      Discharged Absolutely
    </div>
    <div
      data-role="compensation"
    >
      No compensation ordered because some reason
    </div>
    <div
      data-role="licence-endorsement"
    >
       Driver licence record endorsed (no points) 
    </div>
    <div
      data-role="guilty-plea-taken-into-account"
    >
       Defendant's guilty plea Taken into account when imposing sentence 
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should compile correctly with endorsement with discharge with points 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="discharge-type"
    >
      Discharged Absolutely
    </div>
    <div
      data-role="compensation"
    >
      No compensation ordered because some reason
    </div>
    <div
      data-role="licence-endorsement"
    >
       Driver record endorsed with 3 points 
    </div>
    <div
      data-role="guilty-plea-taken-into-account"
    >
       Defendant's guilty plea Taken into account when imposing sentence 
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should compile correctly with endorsement with discharge with points with additional reason 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="discharge-type"
    >
      Discharged Absolutely
    </div>
    <div
      data-role="compensation"
    >
      No compensation ordered because some reason
    </div>
    <div
      data-role="licence-endorsement"
    >
       Driver record endorsed with 3 points 
    </div>
    <div
      data-role="additional-points-reason"
    >
       Reason for penalty points being imposed on more than one offence: Bald tyres 
    </div>
    <div
      data-role="guilty-plea-taken-into-account"
    >
       Defendant's guilty plea Taken into account when imposing sentence 
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should compile correctly with endorsement with financial penalty with no points 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="fine"
    >
      Fine £10
    </div>
    <div
      data-role="compensation"
    >
      To pay compensation of £20
    </div>
    <div
      data-role="licence-endorsement"
    >
       Driver licence record endorsed (no points) 
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should compile correctly with endorsement with financial penalty with points 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="fine"
    >
      Fine £10
    </div>
    <div
      data-role="compensation"
    >
      To pay compensation of £20
    </div>
    <div
      data-role="licence-endorsement"
    >
       Driver record endorsed with 3 points 
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should compile correctly with endorsement with financial penalty with points with additional reason 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="fine"
    >
      Fine £10
    </div>
    <div
      data-role="compensation"
    >
      To pay compensation of £20
    </div>
    <div
      data-role="licence-endorsement"
    >
       Driver record endorsed with 3 points 
    </div>
    <div
      data-role="additional-points-reason"
    >
       Reason for penalty points being imposed on more than one offence: Bald tyres 
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should compile correctly with financial penalty offence decision 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="fine"
    >
      Fine £10.23
    </div>
    <div
      data-role="compensation"
    >
      To pay compensation of £20.01
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should compile correctly with financial penalty offence decision with no fine 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="compensation"
    >
      To pay compensation of £20.01
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;

exports[`FinancialOffenceDecisionComponent should not display reason if no reason is given 1`] = `
<financial-offence-decision-test
  offenceDecision={[Function Object]}
>
  <financial-offence-decision>
    <div
      data-role="fine"
    >
      Fine £10
    </div>
    <div
      data-role="compensation"
    >
    </div>
  </financial-offence-decision>
</financial-offence-decision-test>
`;
